data/derived/comb/progs/unify/prog7800.ml.out
Characters 26-38:
  let rec clone x n = "[" ^ (fun a -> b) ^ (List.combine x n) ^ "]";;
                            ^^^^^^^^^^^^
Error: This expression should not be a function, the expected type is
string
